--- a/FoodSocial/Views/TrangNguoiDung/XemBaiDang.cshtml
+++ b/FoodSocial/Views/TrangNguoiDung/XemBaiDang.cshtml
@@ -20,7 +20,7 @@
             <img width="50" height="50" style="float:left;margin-right:5px;" src="//graph.facebook.com/@CS.idNguoiViet/picture" />
             <div style="width:100%;padding:5px;" align="left">
                 <b style="color:#10c302;font-size:16px;margin-right:5px;">@CS.tenNguoiViet</b><b>at </b><span style="color:red">@CS.diaDiem</span><br />
-                <b style="font-size:12px;color:#808080">@CS.thoiGianViet.ToShortDateString()</b>
+                <b style="font-size:12px;color:#808080">@CS.thoiGianViet.ToString()</b>
             </div>
         </div>
         <div id="ViewNoiDungChinh" align="left"><span style="width:98%;min-height:0px;height:0px;border:none;font-family:'Arial Unicode MS';font-size:15px" id="textarea_@CS.idBaiDang"> @Html.Raw(CS.noiDung) </span> </div>
