--- a/FoodSocial/Views/TrangNguoiDung/_ViewBinhLuan.cshtml
+++ b/FoodSocial/Views/TrangNguoiDung/_ViewBinhLuan.cshtml
@@ -15,7 +15,7 @@
         <img width="50" height="50" style="float:left; margin-right:5px;" src="//graph.facebook.com/@CM.idNguoiViet/picture" />
         <div style="width:100%;padding:5px" align="left">
             <b style="color:#10c302;font-size:14px">@CM.tenNguoiViet</b> <br />
-            <span style="font-size:12px;color:#808080">@CM.thoiGianViet.ToShortDateString()</span>
+            <span style="font-size:12px;color:#808080">@CM.thoiGianViet.ToString()</span>
             <div>@Html.Raw(CM.noiDung)</div>
         </div>
     </div>
