--- a/FoodSocial/Views/Shared/_LayoutUser.cshtml
+++ b/FoodSocial/Views/Shared/_LayoutUser.cshtml
@@ -15,7 +15,9 @@
     <div style="width:998px; background-color:white;min-height:600px;">
         <div style="width:998px; background-color:#52accc;position:fixed;z-index:10;display:block">
             <div style="width:60%;float:left;text-align:left">
-                <img src="~/Images/logo.jpg" height="30" style="margin:5px;"/>
+                <a href="/TrangNguoiDung/TrangChu">
+                    <img src="~/Images/logo.jpg" height="30" style="margin:5px;" />
+                </a>
                 <input type="text" style="height:30px;width:400px;border-radius:3px;border:solid 1px black" placeholder="Search by Location/Content" id="Tim" onkeyup="TimKiem();"/>
             </div>
             @if (Session["tenDangNhap"] == null)
