--- a/FoodSocial/Views/TrangNguoiDung/ChiaSeAnUong.cshtml
+++ b/FoodSocial/Views/TrangNguoiDung/ChiaSeAnUong.cshtml
@@ -4,6 +4,8 @@
 }
 @using (Html.BeginForm("ChiaSe", "TrangNguoiDung", FormMethod.Post, new { name = "ChiaSe" }))
 {
+    <input type="hidden" name="Latitude" id="Latitude" />
+    <input type="hidden" name="Longitude" id="Longitude" />
 <div style="text-align:left">
     <div style="float:left;width:72%">
         <span>What was your feeling?</span><br />
@@ -19,6 +21,25 @@
         </center>
     </div>
     <div>
+        <script type="text/javascript" src="http://maps.googleapis.com/maps/api/js?sensor=false&libraries=places"></script>
+        <script type="text/javascript">
+            google.maps.event.addDomListener(window, 'load', function () {
+                var places = new google.maps.places.Autocomplete(document.getElementById('DiaDiem'));
+                google.maps.event.addListener(places, 'place_changed', function () {
+                    var place = places.getPlace();
+                    var address = place.formatted_address;
+                    var latitude = place.geometry.location.A;
+                    var longitude = place.geometry.location.F;
+                    var mesg = "Address: " + address;
+                    mesg += "\nLatitude: " + latitude;
+                    mesg += "\nLongitude: " + longitude;
+                    $("#Latitude").attr('value', latitude);
+                    $("#Longitude").attr('value', longitude);
+                });
+
+            });
+
+        </script>
         <span>Location:</span>
         <input type="text" id="DiaDiem" name="DiaDiem" style="width:70%;height:35px;border: solid 1px silver; border-radius:3px;margin-top:10px;"/>
     </div>
