--- a/FoodSocial/Content/bootstrap.css
+++ b/FoodSocial/Content/bootstrap.css
@@ -7178,4 +7178,31 @@ button.close {
 .CauHoiTrangChu div table tr td div:hover{
     border: solid 1px blue;
 }
+.black_overlay{
+    display: none;
+    position: fixed;
+    top: 0%;
+    left: 0%;
+    width: 100%;
+    height: 100%;
+    background-color: black;
+    z-index:1001;
+    -moz-opacity: 0.8;
+    opacity:.80;
+    filter: alpha(opacity=80);
+}
+ 
+.white_content {
+    display: none;
+    position: fixed;
+    top: 17%;
+    left: 33%;
+    width: 500px;
+    height: 400px;
+    padding-left:10px;
+    padding-right:10px;
+    background-color: #fbfbfb;
+    z-index:1002;
+    overflow: auto;
+}
 /*# sourceMappingURL=bootstrap.css.map */
