--- a/FoodSocial/Views/TrangNguoiDung/XemBaiDang.cshtml
+++ b/FoodSocial/Views/TrangNguoiDung/XemBaiDang.cshtml
@@ -19,7 +19,7 @@
         <div style="width:100%">
             <img width="50" height="50" style="float:left;margin-right:5px;" src="//graph.facebook.com/@CS.idNguoiViet/picture" />
             <div style="width:100%;padding:5px;" align="left">
-                <b style="color:#10c302;font-size:16px;margin-right:5px;">@CS.tenNguoiViet</b><b>at </b><span style="color:red">@CS.diaDiem</span><br />
+                <b style="color:#10c302;font-size:16px;margin-right:5px;">@CS.tenNguoiViet</b><b>at </b><span style="color:red"><a href="#" onclick="ViewMap('@CS.latitude','@CS.longitude');">@CS.diaDiem</a></span><br />
                 <b style="font-size:12px;color:#808080">@CS.thoiGianViet.ToString()</b>
             </div>
         </div>
