--- a/FoodSocial/Views/TrangNguoiDung/ChiaSeAnUong.cshtml
+++ b/FoodSocial/Views/TrangNguoiDung/ChiaSeAnUong.cshtml
@@ -28,13 +28,13 @@
                 google.maps.event.addListener(places, 'place_changed', function () {
                     var place = places.getPlace();
                     var address = place.formatted_address;
-                    var latitude = place.geometry.location.A;
-                    var longitude = place.geometry.location.F;
+                    var latitude = place.geometry.location.lat();
+                    var longitude = place.geometry.location.lng();
                     var mesg = "Address: " + address;
                     mesg += "\nLatitude: " + latitude;
                     mesg += "\nLongitude: " + longitude;
-                    $("#Latitude").attr('value', latitude);
-                    $("#Longitude").attr('value', longitude);
+                    document.getElementById("Latitude").value = latitude;
+                    document.getElementById("Longitude").value = longitude;
                 });
 
             });
